chore: add deployment workflow

--- a/hugo.toml
+++ b/hugo.toml
@@ -3,6 +3,10 @@ languageCode = 'en-us'
 title = 'Slax Reader blog'
 theme = 'PaperMod'
 
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
+
 [markup]
   [markup.goldmark]
     [markup.goldmark.renderer]
