--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -82,7 +82,7 @@ jobs:
           hugo \
             --gc \
             --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/" \
+            --baseURL "https://reader-blog.slax.com/" \
             --cacheDir "${{ runner.temp }}/hugo_cache"
       - name: Cache save
         id: cache-save
@@ -97,7 +97,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: "https://reader-blog.slax.com/"
     runs-on: ubuntu-latest
     needs: build
     steps:
